styles/about.css
html, body, h1, h2, h3, h4, ul, ol, li, p, a {
  padding: 0;
  border: 0;
  margin: 0;
}
.header {
    font-family: 'Finger Paint', cursive;
    margin-top: 25px;
    margin-bottom: 35px;
}
.header h2 {
   font-family: 'Finger Paint', cursive;
   font-size: 50px;
   color: #5f5e5f;
   font-style: italic;
   text-align: center;
   margin-bottom: 20px;
}
.header h3 {
   font-size: 30px;
   color: #5f5e5f;
   font-style: italic;
   text-align: center;
}
.header img {
  margin: 0 auto 0 auto;
  display: block;
}
.nav {
  list-style-type: none;
  text-align: center;
  margin: 25px 0px 25px 0px;
}
.nav li {
  display: inline;
  padding-right: 45px;
  font-size: 20px;
}
.nav a {
  color: #FF9900;
}
h2 {
  text-align: center;
  color: #5f5e5f;
  margin-bottom: 30px;
  font-family:'PT Sans', sans-serif;
}
.content h3 {
  width: 60%;
  margin-left: 20%;
  margin-bottom: 25px;
  /*font-family:'Special Elite', cursive;*/
  font-family:'PT Sans', sans-serif;
  /*color: #f4f0ea;*/
  color: #5f5e5f;
}
img {
  margin-left: 300px;
}

